# rustviz

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: args.rs  c4.rs  diagram.rs  main.rs  package.rs  rustdoc.rs  walker.rs  workspace.rs
