[package]
name = "rust-c4-gen"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/pold-io/rust-c4-gen"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
rustdoc-types = { version = "0.46.1", features = ["rustc-hash"] }
serde = "1.0.219"
serde_json = "1.0.140"
